K8s_ProductApiDemoAzure/springbootapp/springbootapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: fmiawbd/product-service
          ports:
            - containerPort: 8080
