K8s_ProductApiDemoAzure/springbootapp/springbootapp-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: app
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
